# raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
assets/: image_fragment.glsl  image_vertex.glsl
include/: aabb.h  bvh_node.h  camera.h  hittable.h  image.h  integrator.h  interval.h  light.h  material.h  quad.h  ray.h  renderer.h  rng.h  sampler.h  scene.h  sphere.h  ui.h  utils.h
include/KHR/: readme.md
include/glad/: readme.md
include/glfw/: readme.md
include/glm/: readme.md
include/hittables/: aabb.h  bvh_node.h  hittable.h  quad.h  scene.h
include/math/: interval.h  sampler.h
src/: aabb.cpp  bvh_node.cpp  camera.cpp  hittable.cpp  image.cpp  integrator.cpp  interval.cpp  light.cpp  main.cpp  material.cpp  quad.cpp  ray.cpp  renderer.cpp  rng.cpp  sampler.cpp  scene.cpp  sphere.cpp  ui.cpp
src/glad/: glad.c
src/hittables/: aabb.cpp  bvh_node.cpp  hittable.cpp  quad.cpp  scene.cpp  sphere.cpp
src/math/: interval.cpp  ray.cpp  rng.cpp  sampler.cpp
